# simd_cesu8

./: .editorconfig  .gitignore  Cargo.toml  build.rs  rustfmt.toml
.github/workflows/: ci.yml
benches/: analysis.rs
benches/baselines/: cesu8.json  simd_cesu8.json
dev_util/: Cargo.toml
dev_util/src/: lib.rs
src/: README.md  error.rs  internal.rs  lib.rs  mutf8.rs
src/implementation/: fallback.rs  mod.rs  simd.rs  word.rs
tests/: random.rs
